# autoresearch-rust

./: .gitignore  Cargo.toml  PHASES.md  README.md  pyproject.toml
crates/autoresearch-cli/: Cargo.toml
crates/autoresearch-cli/src/: main.rs
crates/autoresearch-core/: Cargo.toml
crates/autoresearch-core/src/: accelerator.rs  config.rs  dataloader.rs  download.rs  lib.rs  model.rs  parquet_text.rs  prepare.rs  report.rs  tokenizer.rs  train.rs
crates/pyautoresearch/: Cargo.toml
crates/pyautoresearch/src/: lib.rs
examples/python/: run_autoresearch.py
