[workspace]
members = [
    "crates/autoresearch-core",
    "crates/autoresearch-cli",
    "crates/pyautoresearch",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["YASSERRMD <arafath.yasser@gmail.com>"]
repository = "https://github.com/YASSERRMD/autoresearch-rust"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
