[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyautoresearch"
version = "0.1.0"
description = "Rust-accelerated autoresearch with Python bindings"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "YASSERRMD", email = "arafath.yasser@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/YASSERRMD/autoresearch-rust"

[tool.maturin]
manifest-path = "crates/pyautoresearch/Cargo.toml"
module-name = "pyautoresearch"
bindings = "pyo3"
