[package]
name = "autoresearch-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
autoresearch-core = { path = "../autoresearch-core" }
clap = { version = "4.5", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
