[package]
name = "autoresearch-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
train = ["dep:num_cpus", "dep:tch"]

[dependencies]
anyhow.workspace = true
arrow-array = "54.3"
dirs = "6.0"
num_cpus = { version = "1.17", optional = true }
parquet = { version = "54.3", default-features = false, features = ["arrow"] }
rayon = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tch = { version = "0.22", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["esaxx_fast", "fancy-regex"] }
thiserror.workspace = true
tracing.workspace = true
