[package]
name = "pyautoresearch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "pyautoresearch"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
autoresearch-core = { path = "../autoresearch-core", features = ["train"] }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
